# boxy

./: .clang-format  .travis.yml  CMakeLists.txt
bfbuilder/include/: acpi.h  bootparams.h
bfbuilder/src/: common.c
bfbuilder/src/platform/linux/: Makefile
bfbuilder/src/platform/windows/: bfbuilder.vcxproj
bfexec/: CMakeLists.txt
bfexec/include/: args.h  ioctl.h  verbose.h
bfexec/src/: CMakeLists.txt  main.cpp
bfexec/src/platform/linux/: ioctl.cpp  ioctl_private.cpp  ioctl_private.h
bfexec/src/platform/windows/: ioctl_private.cpp
bflinux/: CMakeLists.txt  init.cpp
bfsdk/include/: bfgpalayout.h  bfhypercall.h  bfmath.h  bfvisr.h
bfutil/: CMakeLists.txt
bfvmm/: CMakeLists.txt
bfvmm/include/domain/: domain.h  domain_factory.h
bfvmm/include/hve/arch/intel_x64/: domain.h  iommu.h  pci.h  uart.h  vcpu.h  visr.h
bfvmm/include/hve/arch/intel_x64/apic/: x2apic.h  xapic.h
bfvmm/include/hve/arch/intel_x64/pci/: pci_cfg.h  pci_configuration_space.h  pci_dev.h
bfvmm/include/hve/arch/intel_x64/vmcall/: domain_op.h  run_op.h  vcpu_op.h  visr_op.h
bfvmm/include/hve/arch/intel_x64/vmexit/: cpuid.h  external_interrupt.h  io_instruction.h  msr.h  vmcall.h  yield.h
bfvmm/include/hve/arch/intel_x64/xen/: evtchn.h  evtchn_op.h  gnttab_op.h  xen.h  xen_op.h
bfvmm/src/: CMakeLists.txt
bfvmm/src/hve/: CMakeLists.txt
bfvmm/src/hve/arch/intel_x64/: domain.cpp  iommu.cpp  vcpu.cpp  visr.cpp
bfvmm/src/hve/arch/intel_x64/apic/: xapic.cpp
bfvmm/src/hve/arch/intel_x64/pci/: pci_dev.cpp
bfvmm/src/hve/arch/intel_x64/vmcall/: domain_op.cpp  vcpu_op.cpp  visr_op.cpp
bfvmm/src/hve/arch/intel_x64/vmexit/: msr.cpp  yield.cpp
bfvmm/src/hve/arch/intel_x64/xen/: evtchn_op.cpp  gnttab_op.cpp  xen_op.cpp
drivers/bfbuilder/src/platform/linux/: Makefile
drivers/bfbuilder/src/platform/windows/: bfbuilder.vcxproj
scripts/cmake/: targets.cmake
scripts/cmake/config/: default.cmake
scripts/cmake/depends/: linux.cmake
scripts/util/: driver_build.sh  driver_clean.sh  driver_load.sh  driver_unload.sh  format.sh
visr/linux/: Makefile  entry.c  visr.c
